Updated contact page

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 
         <ul class="flex gap-5 text-gray-600 hidden md:flex">
             <li class="hover:underline">
-                <a href="#">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li class="hover:underline">
                 <a href="product.html">Products</a>
@@ -68,7 +68,7 @@
     </section>
 
     <!-- Footer Section -->
-    <section class="bg-green-100 mt-4 p-4">
+    <section class="bg-green-100 p-4">
         <div>
             <h1 class="text-3xl font-bold">Greenden</h1>
             <p class="mt-4">The Standard check of Lorem ipsum used since 1500s It's responded below for those interest
